--- a/plotters/series-plotter.html
+++ b/plotters/series-plotter.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Series Plotter</title>
-	<script src="src/complex.js"></script>
-	<script src="src/split-complex.wip.js"></script>
-	<script src="src/duals.wip.js"></script>
-	<script src="src/c3.js"></script>
+	<script src="../src/complex.js"></script>
+	<script src="../src/split-complex.wip.js"></script>
+	<script src="../src/duals.wip.js"></script>
+	<script src="../src/c3.js"></script>
 	<style>
 
 :root, :root *{
@@ -73,6 +73,6 @@ Scalar.{hasPolar}
 */
 
 	</script>
-	<script src="./script.js"></script>
+	<script src="series-plotter.js"></script>
 </body>
 </html>
